syntax = "proto3";

option go_package = "github.com/s-matke/abp/abp-back/common/pricing";

package pricing;

import "google/api/annotations.proto";

service PricingService {
    rpc Get(GetRequest) returns(GetResponse) {
        option (google.api.http) = {
            get: "/pricing/{id}"
        };
    }

    rpc GetByAccommodation(GetByAccommodationRequest) returns(GetByAccommodationResponse) {
        option (google.api.http) = {
            get: "/pricing/{accommodation_id}"
        };
    }

    rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        option (google.api.http) = {
            get: "/pricing"
        };
    }

    rpc CreatePricing(CreatePricingRequest) returns(CreatePricingResponse) {
        option (google.api.http) = {
            post: "/pricing"
            body: "pricing"
        };
    }
}

message CreatePricingRequest {
    NewPricing pricing = 1;
}

message CreatePricingResponse {
    Pricing pricing = 1;
}

message NewPricing {
    string accommodation_id = 1;
    float price = 2;
    Season season = 3;
    Week week = 4;
    float holiday = 5;
    enum PricingType {
        PER_PERSON = 0;
        PER_HOUSEHOLD = 1;
    }
    PricingType pricingType = 6;
}

message GetAllRequest {}

message GetAllResponse {
    repeated Pricing pricings = 1;
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    Pricing pricing = 1;
}

message GetByAccommodationRequest {
    string accommodation_id = 1;
}

message GetByAccommodationResponse {
    Pricing pricing = 1;
}

message Pricing {
    string id = 1;
    string accommodation_id = 2;
    float price = 3;
    Season season = 4;
    Week week = 5;
    float holiday = 6;
    enum PricingType {
        PER_PERSON = 0;
        PER_HOUSEHOLD = 1;
    }
    PricingType pricingType = 7;
}

message Season {
    float springMultiplier = 1;
    float summerMultiplier = 2;
    float fallMultiplier = 3;
    float winterMultiplier = 4;
}

message Week {
    float workdayMultiplier = 1;
    float weekendMultiplier = 2;
}